# AI-Social-Content-Generator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: AI-Social-Content-Generator.code-workspace  ARCHITECTURE.md  SECRETS.md  USER_MANUAL_EN.md  USER_MANUAL_HE.md
infra/: SYSTEMD.md  VPS.md  ai-social-bot.service
scripts/: render_carousel_demo.py
src/ai_social_content_generator/: reel_formats.py
src/ai_social_content_generator/analytics/: obtain-handle.py
src/ai_social_content_generator/brainstorm_topics/: EXPAND.md  POLISH.md  SKILL.md
src/ai_social_content_generator/compose_carousel/: SKILL.md
src/ai_social_content_generator/compose_reel/: SKILL.md
src/ai_social_content_generator/compose_reel_text_overlay/: SKILL.md
src/ai_social_content_generator/content_picker/: SKILL.md
src/ai_social_content_generator/convert_carousel_reel/: SKILL.md
src/ai_social_content_generator/convert_carousel_reel_text_overlay/: SKILL.md
src/ai_social_content_generator/create_reel_format/: SKILL.md
src/ai_social_content_generator/create_reel_format_from_reel/: SKILL.md
src/ai_social_content_generator/facebook/: oauth.py  publish.py  token_store.py
src/ai_social_content_generator/generate_headlines/: SKILL.md
src/ai_social_content_generator/ingestion/: frames.py  instagram_scraper.py  transcribe.py
src/ai_social_content_generator/instagram/: callback_server.py  oauth.py  oauth_state.py  publish.py  refresh.py  token_store.py
src/ai_social_content_generator/render/: carousel_render.py  contact_sheet.py  mock_post.py  (+2 more)
tests/: test_prune_topics.py  test_subprocess.py
(+27 files in other folders)
