[project]
name = "ai-social-content-generator"
version = "0.1.0"
description = "AI-powered Instagram viral content pipeline"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "anthropic>=0.100.0",
    "apify-client>=2.5.0",
    "flask>=3.1.3",
    "instaloader>=4.15.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pillow>=10.0",
    "playwright>=1.45",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_social_content_generator"]
